##############################################################################
# Objects: Final usable objects
##############################################################################
add_library(DrugLib_Data_Objects
        base/source/objects.cpp
        base/include/objects.hpp
        base/include/types/organization.hpp
        base/include/types/medicament.hpp
        base/include/types/patient.hpp
        base/include/types/common_object.hpp
        base/include/types/disease.hpp
)
target_link_libraries(DrugLib_Data_Objects
        PUBLIC
        DrugLib_Data_PropertiesController
)
target_include_directories(DrugLib_Data_Objects
        PUBLIC
        base/include
        base/
)
##############################################################################
add_subdirectory(properties)