##############################################################################
# Objects: Final usable objects
##############################################################################
add_library(DrugLib_Data_Objects
        base/source/objects.cpp
        base/include/objects.hpp
        base/include/organization.hpp
        base/include/medicament.hpp
        base/include/patient.hpp
        base/include/common_object.hpp
        base/include/disease.hpp
)
target_link_libraries(DrugLib_Data_Objects
        PUBLIC
        DrugLib_Data_PropertiesController
)
target_include_directories(DrugLib_Data_Objects
        PUBLIC
        base/include
)
##############################################################################
add_subdirectory(properties)