##############################################################################
# Objects: Final usable objects
##############################################################################
add_library(DrugLib_Data_Objects
        base/source/objects.cpp
        # Headers
        base/include/objects.hpp
        base/include/organization.hpp
        base/include/medicament.hpp
        base/include/patient.hpp
        base/include/common_object.hpp
        base/include/disease.hpp
)
target_link_libraries(DrugLib_Data_Objects
        PUBLIC
        DrugLib_Data_PropertiesController
)
target_include_directories(DrugLib_Data_Objects
        PUBLIC
        base/include
)
##############################################################################
add_library(DrugLib_Data_AuthObject
        auth_objects/include/auth_object.hpp
        auth_objects/source/auth_object.cpp
)
target_link_libraries(DrugLib_Data_AuthObject
        PUBLIC
        DrugLib_Common_HashCreator_Factory
        DrugLib_Common_Database_Base
)
target_include_directories(DrugLib_Data_AuthObject
        PUBLIC
        auth_objects/include
)
##############################################################################
add_subdirectory(properties)