##############################################################################
# Internal services
##############################################################################

add_subdirectory(lookup)

add_subdirectory(treatment_manager)

add_subdirectory(patient_info_editor)

add_subdirectory(authenticator)